# crf-chain2-tiers

./: README.md  crf-chain2-tiers.cabal  stack.yaml
notes/: misc.txt  plan.txt
src/Data/CRF/Chain2/: Tiers.hs
src/Data/CRF/Chain2/Tiers/: Array.hs  Core.hs  DAG.hs  DP.hs  Feature.hs  Inference.hs  Model.hs  Train.hs  Util.hs
src/Data/CRF/Chain2/Tiers/DAG/: Feature.hs  Inference.hs  Probs.hs
src/Data/CRF/Chain2/Tiers/DAG/Dataset/: Codec.hs  External.hs
src/Data/CRF/Chain2/Tiers/Dataset/: Codec.hs  External.hs  Internal.hs
src/Data/CRF/Chain2/Tiers/Feature/: Hidden.hs  Present.hs
