name:               crf-chain2-tiers
version:            0.5.0
synopsis:           TODO
description:
    TODO
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2013 IPI PAN
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           TODO
build-type:         Simple

library
    hs-source-dirs: src

    build-depends:
        base >= 4 && < 5
      , containers
      , array
      , vector
      , binary
      , vector-binary
--       , logfloat
--       , parallel
--       , monad-codec >= 0.2 && < 0.3
--       , data-lens
--       , comonad-transformers
--       , sgd >= 0.2.2 && < 0.3

    exposed-modules:
        Data.CRF.Chain2.Tiers.Dataset.Internal

    ghc-options: -Wall -O2

-- source-repository head
--     type: git
--     location: https://github.com/kawu/concraft.git
