name:               crf-chain2-tiers
version:            0.1.0
synopsis:           TODO
description:
    TODO
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2013 IPI PAN
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/crf-chain2-tiers
build-type:         Simple

library
    hs-source-dirs: src

    build-depends:
        base >= 4 && < 5
      , containers
      , array
      , vector
      , binary
      , vector-binary
      , monad-codec >= 0.2 && < 0.3
      , data-lens
      , comonad-transformers
      , logfloat
      , parallel
      , sgd >= 0.3 && < 0.4

    exposed-modules:
        Data.CRF.Chain2.Tiers
      , Data.CRF.Chain2.Tiers.Dataset.Internal
      , Data.CRF.Chain2.Tiers.Dataset.External
      , Data.CRF.Chain2.Tiers.Dataset.Codec
      , Data.CRF.Chain2.Tiers.Feature
      , Data.CRF.Chain2.Tiers.Model
      , Data.CRF.Chain2.Tiers.Inference
      , Data.CRF.Chain2.Tiers.Array

    other-modules:
        Data.CRF.Chain2.Tiers.Util
      , Data.CRF.Chain2.Tiers.DP
        

    ghc-options: -Wall -O2

source-repository head
    type: git
    location: https://github.com/kawu/crf-chain2-tiers.git
